<package>
	<name>varianceCalculator</name>
	<version>1.0.0</version>
	<description>
		Cut down the area you want and compute the variance and save to file
	</description>
	<maintainer email="wangzhe936@outlook.com">wz</maintainer>
	<author>Zhe Wang</author>
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	
	<build_depend>pcl_conversions</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	
	<run_depend>pcl_conversions</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>roscpp</run_depend>
</package>